fixed a bunch of layout issues and added a homebutton fadeIn once the page start to scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Alex+Brush);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,100,300,700);
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display+SC:700,400);
+@import url(https://fonts.googleapis.com/css?family=Lato);
 
 body {
 	position: relative;
 	background-color: #eeeddc;
 	color: #5b3421;
+	font-family: 'Lato', sans-serif;
+	font-size: 1.4rem;
 }
 img {
 	max-width: 200px;
@@ -18,7 +21,7 @@ h1, h2, h3, nav {
 
 /* Header Navigation */
 header .navbar {
-	padding: 10px 0;
+	padding: 10px 0 0 0;
 	font-size: 1.1em;
 	transition: all .5s ease-out;
 }
@@ -49,15 +52,25 @@ and (max-width: 768px) {
 	header .navbar.navbar-default.navbar-fixed-top {
 		position: static;
 		overflow: visible;
-		margin-bottom: 30px;
 	}
 
-	header .navbar-collapse.in {
-		background-color: rgba(0,0,0,0.2) !important;
+	header .navbar {
+		margin-bottom: 0;
+	}
+
+	header .navbar-nav {
+		margin: 30px -15px 0 -15px;
+	}
+
+	header .navbar-collapse.in ul{
+		background-color: rgba(0,0,0,0.1) !important;
 	}
 	header .navbar-collapse.in .nav>li>a {
 		padding: 10px 15px;
 		border-bottom: dotted 1px #9d4901;
+	}
+	.container>.navbar-header, .container-fluid>.navbar-header, .container>.navbar-collapse, .container-fluid>.navbar-collapse{
+		border:0;
 	}
 }
 
@@ -78,6 +91,7 @@ header .navbar-brand {
 	min-height: 100px;
 	height: auto;
 	overflow: visible;
+	z-index:5000;
 }
 
 header .nav>li>a {
@@ -89,7 +103,7 @@ header .navbar-brand h1 {
 	font-size: 2.4em;
 	font-weight: bolder;
 	padding-left: 2.4em;
-	margin-top: 5px;
+	margin-top: -5px;
 	font-family: 'Alex Brush', cursive;
 }
 
@@ -97,7 +111,6 @@ header .navbar-brand span.subhead{
 	font-size: .65em;
 	font-family: 'Roboto Slab', serif;
 	display: block;
-	/*color: #0863b8;*/
 	color: #097fed;
 	margin-top: -10px;
 	margin-left: 5px;
@@ -107,6 +120,12 @@ header .navbar-brand span.subhead{
 /* Navbar Toggle */
 header .navbar-toggle {
 	background-color: #16548e;
+}
+header .navbar-default .navbar-toggle .icon-bar {
+	background-color: #fff;
+}
+header .navbar-default .navbar-toggle:hover .icon-bar {
+	background-color: #888;
 }
 
 header .navbar-defaut .navbar-toggle .icon-bar {
@@ -125,12 +144,35 @@ header .navbar-defaut .navbar-toggle .icon-bar {
     border: 1px solid #fff;
     border-radius: 10px
 }
+.home-button {
+	position: fixed;
+	width: 120px;
+	height: 60px;
+	background: rgba(0,0,0, 0.2);
+	bottom: 0;
+	left: 50%;
+	margin-left: -60px;
+	font-size: 4rem;
+	border-radius: 120px 120px 0 0;
+	text-align: center;
+}
 
+.home-button a {
+	box-sizing: border-box;
+	padding: 40px;
+	color: #fff;
+}
+.home-button a:hover {
+	color: rgba(255, 217, 78, 0.85);
+}
 /* Mission */
 #mission {
 	background-color: #ffd94e;
-	background-image: linear-gradient(to bottom, #586D74, #8badb9);
+	background-image: linear-gradient(to bottom, #698d9a, #8badb9);
 	border-top: solid 20px #d69834;
+}
+#mission .container {
+	padding-bottom: 25px;
 }
 
 /* Page -- Services */
@@ -174,10 +216,6 @@ mad (max-width: 768px) {
 #testimonials {
 	padding: 0;
 }
-
-/*#testimonials h2{
-	display: none;
-}*/
 
 #testimonials blockquote {
   margin: 0;
